package br.unitins.joaovittor.basqueteiros.Tamanho.dto;

public record TamanhoDTO(

    Integer numeracao,
    String tamanhoEmCm
) { }
