@startuml Basqueteiros

enum Status {
    AGUARDANDO_PAGAMENTO
    EM_PROCESSO
    EM_TRANSITO
    ENTREGUE
    CANCELADO
}

enum Tamanho {
    TAMANHO_36
    TAMANHO_37
    TAMANHO_38
    TAMANHO_39
    TAMANHO_40
    TAMANHO_41
    TAMANHO_42
    TAMANHO_43
    TAMANHO_44
}

enum TamanhoCano {
    BAIXO
    MEDIO
    GRANDE
}

class Usuario {
    - login: String
    - senha: String
    - nome: String
}

class Cliente {
    - dataCadastro: LocalDate
    - saldo: Double
}

class Funcionario {
    - numeroContrato: String
    - dataAdmissao: LocalDate
}

class Pedido {
    - data: LocalDate
    - valorTotal: Double
}

class ItemPedido {
    - valor: Double
    - quantidade: int
}

class Marca {
    - nome: String
}

class Tenis {
    - nome: String
    - descricao: String
    - material: String
    - peso: Double
    + calcularEstoque()
}

'class Fornecedor {
'    - nomeEmpresa: String
'    - cnpj: String
'    - dataCadastro: LocalDate
'}

'class Compra {
'    - dataCompra: LocalDate
'    - dataEntrega: LocalDate
'    - quantidade: int
'    - listaTenis: List
'}

Pedido "*" --> "1" Cliente
Pedido "1" --> "1" Status
Pedido "1" *--> "*" ItemPedido

ItemPedido "*" --> "*" Tenis
Tenis "*" *--> "1" Marca
Tenis "*" *--> "1" TamanhoCano
Tenis "*" *--> "1" Tamanho

Cliente "1" -left-> "1" Usuario
Funcionario "1" --> "1" Usuario
 
'Compra "*" --> "1" Fornecedor


@enduml
